[project]
name = "toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jinja2>=3.1.0"]

[project.scripts]
kmpconvert = "toolbox.kmpconvert:main"
claude-template = "toolbox.claude_template:main"

[tool.setuptools.packages.find]
exclude = ["[prompts]*"]
