[project]
name = "toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jinja2>=3.1.0"]

[project.scripts]
kmpconvert = "toolbox.kmpconvert.main:main"
claude-template = "toolbox.claude_template.main:main"
cm-adb = "toolbox.cm_adb.main:main"
aslog = "toolbox.aslog.main:main"
geojson-ads-circles = "toolbox.geojson_ads_circles.main:main"
